# working_with_fann

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
